--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -1,9 +1,7 @@
 name: Build and push python wheel
 on:
-  push:
-    branches: ["*"]
   pull_request:
-      branches: ["*"]
+      branches: ["main"]
   workflow_dispatch:
 
 permissions:
